--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "build": "tsc",
-    "prisma:generate": "prisma generate --schema=server/prisma/schema.prisma",
+    "build": "tsc -p tsconfig.json",
+    "prisma:generate": "prisma generate --schema=prisma/schema.prisma",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
